# embedded-test-automation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
measurements/: characterization.csv  sample-run.csv
scripts/: characterize.py  plot_characterization.py  plot_trends.py
src/dut_sim/: motor_controller.py
src/testbench/: driver.py  measurements.py  serial_transport.py
tests/: conftest.py  test_control_behavior.py  test_fault_injection.py  test_protocol.py  test_protocol_fuzz.py  test_serial_transport.py  test_watchdog.py
